--- a/meal-app-frontend/package.json
+++ b/meal-app-frontend/package.json
@@ -19,6 +19,7 @@
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "flowbite-react": "^0.11.4",
     "formik": "^2.4.6",
