--- a/meal-app-frontend/package.json
+++ b/meal-app-frontend/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.5",
+    "@mui/joy": "^5.0.0-beta.52",
     "@mui/material": "^6.4.9",
     "@mui/styled-engine-sc": "^7.0.1",
     "@reduxjs/toolkit": "^2.5.0",
