--- a/meal-app-frontend/package.json
+++ b/meal-app-frontend/package.json
@@ -27,6 +27,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
+    "react-router-dom": "^7.6.0",
     "styled-components": "^6.1.16",
     "yup": "^1.6.1"
   },
