--- a/meal-app-frontend/package.json
+++ b/meal-app-frontend/package.json
@@ -26,6 +26,7 @@
     "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.0",
     "styled-components": "^6.1.16",
